# Slipstream

./: .deepsource.toml  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  README.md  make.bat  make.ps1  meta.py  pyinstaller.py  pyproject.toml  requirements.txt  setup.iss  setup.py
.github/workflows/: build.yml  cd.yml  ci.yml  dist.yml  pypi-ci.yml  release.yml
assets/: README.md  banner.xcf
pslipstream/: __init__.py  __main__.py  __version__.py  config.py  device.py  dvd.py  exceptions.py  helpers.py  log.py  logger.py  main.py  progress.py  scsi.py  slipstream.py
pslipstream/cfg/: __init__.py
pslipstream/gui/: __init__.py  bridge.py  browser_frame.py  focus_handler.py  keyboard_handler.py  load_handler.py  main_window.py  main_window.ui  main_window_ui.py  settings_window.py  workers.py
pslipstream/static/: README.md  form.ui  style.qss
pslipstream/static/img/: icon.xcf
pslipstream/ui/: DeviceWorker.py  MainWindow.py  MainWindow.ui  __init__.py  form.ui  main.py  main.ui
setup_commands/: __init__.py  dist.py  pack.py  upload.py
slipstream/: __init__.py  __version__.py  config.py  dvd.py  helpers.py
slipstream/gui/: __init__.py  browser_frame.py  keyboard_handler.py  load_handler.py
slipstream/static/: README.md
