[project]
name = "pslipstream"
version = "1.1.1"
description = "The most informative Home-media backup solution."
authors = [{ email = "rlaphoenix@pm.me" }]
requires-python = ">=3.11"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["python", "dvd", "backup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 8.1",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: Microsoft :: Windows :: Windows Server 2008",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pycdlib~=1.16.0",
    "pydvdcss~=1.5.0",
    "pydvdid-m~=1.1.1",
    "appdirs~=1.4.4",
    "tqdm~=4.68.3",
    "PySide6-Essentials~=6.11",
    "coloredlogs~=15.0.1",
    "jsonpickle~=4.1.2",
    "pywin32>=306; sys_platform == 'win32'",
    "WMI~=1.5.1; sys_platform == 'win32'",
]

[project.urls]
Repository = "https://github.com/Homemediadb/Slipstream"
Issues = "https://github.com/Homemediadb/Slipstream/issues"
Forums = "https://github.com/Homemediadb/Slipstream/discussions"
Changelog = "https://github.com/Homemediadb/Slipstream/blob/master/CHANGELOG.md"

[tool.uv]
package = false  # GUI application, not a distributable/importable package

[dependency-groups]
pack = ["pyinstaller~=6.21.0", "click~=8.4.1"]  # click is used by pyinstaller.py (build script only)
lint = ["ruff~=0.15.18", "pre-commit~=4.6.0"]
form = ["ruff~=0.15.18"]
type = [
    "mypy~=2.1.0",
    "types-python-dateutil~=2.9.0.20260518",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
